# boehm-berarducci

./: .gitignore  README.md  stack.yaml
go/: maybe.go
haskell/: .gitignore  LICENSE  boehm-berarducci.cabal  either.hs  haskell.cabal  maybe.hs  package.yaml  stack.yaml
haskell/boehm-berarducci/src/Data/: Maybe.hs
haskell/src/Data/: Either.hs  Maybe.hs
haskell/src/Data/BoehmBerarducci/: Either.hs  Free.hs  Maybe.hs  Pair.hs
haskell/test/DataSpec/BoehmBerarducciSpec/: EitherSpec.hs  PairSpec.hs
java/: Readme  build.gradle
java/src/main/java/com/bb_encoding/: Either.java  Maybe.java
java/src/main/java/com/boehm_berarducci/: Either.java  Main.java  Maybe.java
java/src/main/java/com/maybe/: Main.java  Maybe.java
python/: Pipfile  README.md  either.py  free.py  maybe.py  requirements.txt  setup.py
python/boehmberarducci/: __init__.py  either.py  free.py  functional_base.py  maybe.py  tree.py
python/tests/: test_either.py  test_free.py  test_maybe.py
scala/: build.gradle.bkp  build.sbt
scala/src/main/scala/: Main.scala
