name:                boehm-berarducci
version:             0.1.0.0
synopsis:            Boehm Berarducci encodings for some types.
description:         Please see README.md
homepage:            https://github.com/rcalsaverini/boehm-berarducci#readme
license:             MIT
license-file:        LICENSE
author:              Rafael S. Calsaverini
maintainer:          example@example.com
copyright:           Rafael S. Calsaverini
category:            Data
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite boehm-berarducci-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , boehm-berarducci
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/boehm-berarducci
